# solpos-postgres

./: .clang-format  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pg_solpos.c  pg_solpos.sql  requirements-dev.txt  setup.cfg
.github/workflows/: CI.yml
tests/: solpos_test.py
